# face-validation-service

./: .dockerignore  .gitignore  Cargo.toml  README.md  cloudbuild.yaml  dockerfile  pyproject.toml
example/: onnx_inference.ipynb
models/: yolo11n_640_hface_quantized.onnx  yolo11n_9ir_640_hface_quantized.onnx
notebook/: yolo11n_haface_20.ipynb  yolo11n_hface_20.ipynb
scripts/: onnx_quantization.py
web/: cache.rs  clustering.go  clustering.rs  detection.go  detection.rs  embedded.go  go.mod  go.sum  handlers.rs  main.go  main.rs  message.go  pool.go  types.rs
web/clustering/: clustering.go
web/detections/: channels.go  constants.go  detection.go  detection_amd64.go  detection_amd64.s  detection_other.go  simd.go  simd_amd64.go  simd_amd64.s
web/models/: types.go
