[package]
name = "face-validation-service"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
dbscan = "0.3.1"
env_logger = "0.11.5"
futures-util = "0.3.31"
image = "0.25.5"
lazy_static = "1.5.0"
lru = "0.12.5"
ndarray = "0.15.6"
num_cpus = "1.16.0"
ort = "1.16.3"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "face-validation-service"
path = "web/main.rs"
