[package]
name = "face-validation-service"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release.package."image"]
opt-level = 3

[profile.release.package."ndarray"]
opt-level = 3

[profile.release.package."ort"]
opt-level = 3

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
base64 = "0.22.1"
dashmap = "6.1.0"
dbscan = "0.3.1"
env_logger = "0.11.5"
futures-util = "0.3.31"
image = "0.25.5"
lazy_static = "1.5.0"
lru = "0.12.5"
nalgebra = "0.33.2"
ndarray = "0.15.6"
num_cpus = "1.16.0"
ort = "1.16.3"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = {version = "1.41.1", features = ["full"] }

[[bin]]
name = "face-validation-service"
path = "web/main.rs"
