[project]
name = "face-validation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "tensorflow>=2.17.0",
]

[tool.uv]
dev-dependencies = [
    "black[jupyter]>=24.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
]
